Fix QQuickRenderControl::invalidate with software renderer

With the software renderer QQuickRenderControl::initialize() is never
called, but we still need to cleanup scenegraph nodes on destruction or
invalidation.

Change-Id: I4c17a440d683b1f0512fb8a9370430cf3680d8ee
Task-number: QTBUG-70740
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>